[v9r1p1]
use DIRAC v6r19p9

* FastSimulationType can be None
* the retention rate should be float
* fix case of already replicated RAW files
* fix test
* TarGZ: move the instanciation of the SE out of the init
* remove unused imports
* get FailoverSes according to getDestinationSEList
* fix typo
* cosmetics
* add logging info
* PPG can change the newly added fields
* typo
* more improvements + progress bar for interactive usage
* fix exception
* Allow non interactive usage to print out a message
* gLogger missing
* use resolveSEGroup
* just count processed files
* fix for last loop
* make number of files in getFileDescendants a parameter
* use correct date format
* fix message
* fix log level
* slight optimization
* optimize checking for descendants for RemoveWhenProcessed
* remove legacy lower case options, use gLogger
* use a function for dumping files
* set Failed as dictionary
* add SE status in lfn-replicas --All
* add possibility to exclude sites in DSTBroadcast
* fix dataManager and LFN list
* add --CancelRequest option
* add option --List

[v9r1]
use DIRAC v6r19p8

* fix for cleaning sqlite
* fixed location of tar file
* fix variable name
* add missing exception
* fix change of return from utility
* pep8 on API
* get pp for more than one path
* accept * as wildcard character
* accept * as wildcard character
* remove duplicated line
* new script to list processing passes matching a BK path
* Minor bug fix
* if the StartingDate or FinalizationDate is not provided, use the current date. Update the unit test
* add FastSimulationType to the production request page
* add FastSimulationType to the production request page
* handle correctly the datetime.date objects
* do not reduce the number of elements
* add new fields to the Production request
* add the missing group by expression, which required by the latest version of MySQL
* fix the sum of the number of bkk events and grouping
* WMS: escape the pilotwrapper template

[v9r0p2]
use DIRAC v6r19p7
