@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r1p2
+  {
+    Modules = LHCbDIRAC:v9r1p2, LHCbWebDIRAC:v4r4p2
+    Depends = DIRAC:v6r19p10
+    LcgVer = v13r0
+  }
+
   v9r1p1
   {
     Modules = LHCbDIRAC:v9r1p1, LHCbWebDIRAC:v4r4p2
