@@ -1,9 +1,9 @@
 {
   "name": "LHCbDirac",
-  "version": "v9r1p1",
+  "version": "v9r1p2",
   "used_projects": {
     "project": [
-      [ "Dirac", "v6r19p9",
+      [ "Dirac", "v6r19p10",
         [ "bin", "python", "lib" ]
       ],
       [ "LHCbGrid", "v13r0",
